<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Vertical Load Tester</string>

        <string name="app_name_caps">BLUETOOTH DATA ANALYZER</string>
        <string name="scanning">Scanning for devices...</string>
        <string name="select_device">Select a device to connect!</string>
        <string name="none_paired">No devices have been paired</string>
        <string name="none_found">No devices found</string>
        <string name="title_paired_devices">Paired Devices</string>
        <string name="title_other_devices">Other Available Devices</string>
        <string name="button_scan">Scan for devices</string>

        <string name="send">Send</string>
        <string name="not_connected">You are not connected to a device</string>
        <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
        <string name="title_connecting">Connecting...</string>
        <string name="title_connected_to">Connected to <xliff:g id="device_name">%1$s</xliff:g></string>
        <string name="title_not_connected">Not connected</string>

        <string name="drawer_open">Open navigation drawer</string>
        <string name="drawer_close">Close navigation drawer</string>

        <string name="analysis">Analysis</string>
        <string name="highest">Max PR(kg)</string>
        <string name="lowest">Min PR(kg)</string>
        <string name="average">Avg PR(kg)</string>
        <string name="value">value</string>

        <string-array name="nav_drawer_items">
            <item>   Home Screen</item>
            <item>   Analysis</item>
            <item>   Analysis Settings</item>

        </string-array>
    <declare-styleable name="customfont"> <attr name="android:fontFamily"/> <attr name="android:textStyle"/> </declare-styleable>


</resources>
