<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@+id/divide"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title_paired_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#666"
            android:paddingLeft="5dp"
            android:text="@string/title_paired_devices"
            android:textColor="#fff"
            android:visibility="gone"
            />



        <ListView
            android:id="@+id/paired_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stackFromBottom="true"
            />


    </LinearLayout>

    <View android:id="@+id/divide"
        android:layout_height="1dp"
        android:layout_width="match_parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divide"
        android:layout_above="@+id/button_scan"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_new_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#666"
            android:paddingLeft="5dp"
            android:text="@string/title_other_devices"
            android:textColor="#fff"
            android:visibility="gone"

            />


        <ListView
            android:id="@+id/new_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stackFromBottom="true"
            />

    </LinearLayout>

        <Button
            android:id="@+id/button_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_scan"
            android:visibility="visible"
            android:layout_alignParentBottom="true"
            />

    </RelativeLayout>
