<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="3"
    android:background="@drawable/analysis_fragment_background"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="15dp"
    >
    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</LinearLayout>


    <TableLayout
        android:id="@+id/tableLayoutAnalysis"
        android:animateLayoutChanges="true"
        android:background="@drawable/analysis_fragment_data_shader"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <TableRow
            android:layout_marginTop="2dp">
            <TextView
                android:id="@+id/textViewHighest"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textColor="#FFFFFF"
                />

            <TextView
                android:id="@+id/textViewLowest"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textColor="#FFFFFF"
                />

            <TextView
                android:id="@+id/textViewAverage"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textColor="#FFFFFF"
                />

        </TableRow>


        <TableRow
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp">
            <TextView
                android:id="@+id/textViewHighestLabel"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:text="@string/highest"
                android:textColor="#FFFFFF"/>

            <TextView
                android:id="@+id/textViewLowestLabel"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/lowest"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="#FFFFFF"/>

            <TextView
                android:id="@+id/textViewAverageLabel"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/average"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="#FFFFFF"/>

        </TableRow>

    </TableLayout>
</LinearLayout>