<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="3dp"
    android:orientation="horizontal"
    android:background="#ffffff"
    >

    <TableLayout
        android:id="@+id/tableLayoutAnalysis1"
        android:layout_width="0dp"
        android:layout_weight="4"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/textViewHighest1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:textColor="#000000"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_small"
                />
            <TextView
                android:id="@+id/textViewAverage1"
                android:textSize="@dimen/text_small"
                android:gravity="center"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"

                />
            <TextView
                android:id="@+id/textViewLowest1"
                android:textSize="@dimen/text_small"
                android:gravity="center"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"

                />
        </TableRow>


        <TableRow
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp">
            <TextView
                android:id="@+id/textViewHighestLabel1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_small"
                android:text="@string/highest"
                />
            <TextView
                android:id="@+id/textViewAverageLabel1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/average"
                android:textSize="@dimen/text_small"
                />
            <TextView
                android:id="@+id/textViewLowestLabel1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/lowest"
                android:textSize="@dimen/text_small"
                />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_gravity="end"
        android:layout_marginRight="3dp"
        android:layout_marginLeft="8dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewDate"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/text_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewTime"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/text_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewDeviceConfig"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="@dimen/text_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>